# PacoseMaxSATSolver

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README  WDIMACSConversionNew2Old.py  install  maxsat_proof.pbp
Helper/: CLI11.hpp  ClauseDB.h  DebugOut.h  MaxSATDimacs.h  MaxSATDimacsNew.h
MaxSATRegressionSuite/: .gitignore  Pacose.sh  README.txt  kissat  reduceFiles.sh  run_tests.sh  wcnfverifier
MaxSATRegressionSuite/baseWCNFs/: OneHardUnit.wcnf  OneHardUnitDoesNotContainLiteralOne.wcnf  OneSoftUnitWeightUINT32Maxplus1.wcnf  TautologyHardClause.wcnf  TautologySoftClause.wcnf  TwoMinimalContradictingSoftClauses.wcnf  emptyClause.wcnf  emptySoftClauseWithNormalSoftClauseWithHardClauses.wcnf  emptySoftClauseWithUnsatHardClauses.wcnf  emptySoftClausesWithHardClauses.wcnf  smallo0.wcnf  smallo1.wcnf
MaxSATRegressionSuite/mseWCNFs/: 414.wcsp.dir.wcnf  WCNF_pathways_p02.wcnf  archlinux.dimacs.wcnf  f49-DC_TotalLoss.seq-A-2-2-EDCBAir.wcnf  g2_n56e57_n61e85.wcnf  normalized-factor-size=9-P=383-Q=509.opb.wcnf  synthetic-20.wcnf
MaxSATRegressionSuite/reducedUniqueWCNFs/: CGSS_18_red-2292127357992646614.wcnf  CGSS_18_red-2727021659120573577.wcnf  CGSS_18_red-3027352830162997443.wcnf  CGSS_18_red-4155975368981508091.wcnf  CGSS_42_red-1487924879221147942.wcnf  CGSS_42_red-3021608191358524543.wcnf  CGSS_42_red-745085082311664877.wcnf  CGSS_44_red-1224009853503763696.wcnf  CGSS_44_red-196753209117644832.wcnf  CGSS_44_red-2258465440550850344.wcnf  CGSS_44_red-4502739501875098556.wcnf  CGSS_45_red-1012855063300641881.wcnf  CGSS_45_red-2868335317395646542.wcnf  CGSS_45_red-3537275520299263569.wcnf  CGSS_48_red-1206691116550062767.wcnf  CGSS_48_red-3254119129266484915.wcnf  CGSS_48_red-4480925500239101576.wcnf  CGSS_48_red-5770998853622781.wcnf  Cashwmaxsat-CorePlus_12_red-1520613405909291775.wcnf  Cashwmaxsat-CorePlus_12_red-2262641803525952700.wcnf  Cashwmaxsat-CorePlus_12_red-3938664394182135786.wcnf  Cashwmaxsat-CorePlus_14_red-2603027783804086454.wcnf  Cashwmaxsat-CorePlus_14_red-4082988606349055981.wcnf  Cashwmaxsat-CorePlus_14_red-623470715727282899.wcnf  Cashwmaxsat-CorePlus_18_red-1849880863928801000.wcnf  Cashwmaxsat-CorePlus_18_red-2448297982864257022.wcnf  Cashwmaxsat-CorePlus_18_red-2510077496917081429.wcnf  Cashwmaxsat-CorePlus_18_red-596327489556597172.wcnf  Cashwmaxsat-CorePlus_42_red-1136848343093114422.wcnf  Cashwmaxsat-CorePlus_42_red-2625136892140343246.wcnf  Cashwmaxsat-CorePlus_42_red-773616030500625105.wcnf  Cashwmaxsat-CorePlus_44_red-2173826577747340621.wcnf  Cashwmaxsat-CorePlus_44_red-4466927197129988359.wcnf  Cashwmaxsat-CorePlus_45_red-274178739103012090.wcnf  Cashwmaxsat-CorePlus_45_red-4113462657865614335.wcnf  Cashwmaxsat-CorePlus_45_red-4413781331871572532.wcnf  Cashwmaxsat-CorePlus_45_red-4504257650829621829.wcnf  Cashwmaxsat-CorePlus_48_red-2097032348476744928.wcnf  Cashwmaxsat-CorePlus_48_red-2887089214911469495.wcnf  Cashwmaxsat-CorePlus_48_red-3545243853613679243.wcnf  (+413 more)
maxSAT/: Encodings.cpp  Encodings.h  Greedyprepro.cpp  Greedyprepro.h  Pacose.cpp  Pacose.h  Settings.h  Softclause.h
maxSAT/DGPW/: bucket.cpp  bucket.h  cascade.cpp  cascade.h  dgpw.cpp  dgpw.h  multiplecascade.cpp  multiplecascade.h  softclausenodes.h  sorter.cpp  sorter.h  timemeasurement.h  timevariables.h  totalizerencodetree.h
maxpre2/: README.md
maxpre2/src/: AM1.cpp  BCE.cpp  BCR.cpp  BIG.cpp  BVE.cpp  FLE.cpp  FLP.cpp  GSLE.cpp  HARD.cpp  Makefile  RED.cpp  SE.cpp  SLE.cpp  SSR.cpp  TMS.cpp  UPCF.cpp  clause.cpp  clause.hpp  global.hpp  inputreader.cpp  inputreader.hpp  log.cpp  log.hpp  main.cpp  modelsearch.cpp  outputreader.cpp  preprocessor.cpp  preprocessor.hpp  preprocessorinterface.cpp  preprocessorinterface.hpp  probleminstance.cpp  probleminstance.hpp  satlikeinterface.cpp  satlikeinterface.hpp  touchedlist.hpp
maxpre2/src/satlike/: Alg_SATLike.h  LICENSE
maxpre2/src/satsolver/: glucose3.cpp  satsolverinterface.hpp
maxpre2/src/satsolver/solvers/glucose3/: LICENSE
maxpre2/src/satsolver/solvers/glucose3/core/: BoundedQueue.h  Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
maxpre2/src/satsolver/solvers/glucose3/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Sort.h  Vec.h  XAlloc.h
maxpre2/src/satsolver/solvers/glucose3/utils/: Options.h  System.cc  System.h
script/: .gitignore  2929586710996.wcnf  callPacose.sh  certified-pacose.sh  fuzzTOTEST.sh  multilevel.wcnf  wcnfuzz  wcnfuzz.py
script/wcnfdddmin/: makefile  wcnfddmin.cpp
script/wcnffuzz/: wcnfuzz.c
solver-proxy/: .gitignore  CLI11.hpp  CMakeLists.txt  CadicalSolverProxy.cpp  CadicalSolverProxy.h  Glucose421SolverProxy.cpp  Glucose421SolverProxy.h  Main.cpp  SATSolverProxy.cpp  SATSolverProxy.h  Timer.h  readme.txt
solver-proxy/glucose-3.0/: .gitignore  README.md
solver-proxy/glucose-3.0/core/: .gitignore  BoundedQueue.h  Dimacs.h  Main.cc  Makefile  Solver.cc  Solver.h  SolverTypes.h
solver-proxy/glucose-3.0/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h  template.mk
solver-proxy/glucose-3.0/simp/: Main.cc  Makefile  SimpSolver.cc  SimpSolver.h
solver-proxy/glucose-3.0/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
solver-proxy/glucose-4.2.1/: CMakeLists.txt
solver-proxy/glucose-4.2.1/core/: BoundedQueue.h  Constants.h  Dimacs.h  Solver.cc  Solver.h  SolverStats.h  SolverTypes.h  lcm.cc
solver-proxy/glucose-4.2.1/mtl/: Alg.h  Alloc.h  Clone.h  Heap.h  IntTypes.h  Map.h  Queue.h  Sort.h  Vec.h  VecThreads.h  XAlloc.h
solver-proxy/glucose-4.2.1/parallel/: ClausesBuffer.cc  ClausesBuffer.h  Main.cc  MultiSolvers.cc  MultiSolvers.h  ParallelSolver.cc  ParallelSolver.h  SharedCompanion.cc  SharedCompanion.h  SolverCompanion.cc  SolverCompanion.h  SolverConfiguration.cc  SolverConfiguration.h
solver-proxy/glucose-4.2.1/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
solver-proxy/glucose-4.2.1/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
